--- a/assets/css/ux4g-v1.0.1.css
+++ b/assets/css/ux4g-v1.0.1.css
@@ -3757,7 +3757,7 @@
      height: 0;
      margin: var(--bs-dropdown-divider-margin-y) 0;
      overflow: hidden;
-     border-top: 1px solid var(--bs-dropdown-divider-bg);
+     /* border-top: 1px solid var(--bs-dropdown-divider-bg); */
      opacity: 1;
  }
  
